规范组件名&补充readme文档

--- a/packages/assets/theme/default.less
+++ b/packages/assets/theme/default.less
@@ -173,7 +173,9 @@ body {
 
 /**header*/
 .f-header-default {
-    .content-color-success();
+    border-bottom: 1px solid @info ;
+    box-shadow: 0px 0px 5px #color-darken[default];
+    .content-color-default();
 }
 
 /**button*/
